src/components/Modal/modal.scss
@import '../../styles/_variables';
@import '../../styles/_fonts';

@mixin modal-container {
  padding: 1em 0em 1em 0em;
  @media screen and (max-width: $breakpoint-mobile-flipped) {
    padding: 0.5em 0em 0.5em 0em;
  }
}

@mixin modal-section {
  display: flex;
  flex-direction: column;
  text-align: center;
  font-weight: 300;
  @media screen and (max-width: $breakpoint-mobile-flipped) {
      li {
      margin-left: 25%;
    }
  }
}

.popupcontainer{
  position: fixed;
  z-index: 150;
  top: 0em;
  right: 0;
  bottom: 0;
  left: 0;
  overflow-y: scroll;
}
.popup {
  position: relative;
  z-index: 400;
  margin: auto;
  top: 0;
  width: 50%;
  border-radius: 5px;
  background: white; //rgba(255, 255, 255, 0.9);
  margin-bottom: 3em;
  margin-top: 3em;
  padding-bottom: 1em;
}
.shade {
  position: fixed;
  z-index: 350;
  width: 100vw;
  height: 100vh;
  top: 0;
  left: 0;
  background: rgba(0, 0, 0, 0.8);
  .shadecontent{
    position: absolute;
    top: 1em;
    right: 2em;
  }
}
.cross{
  color: $text-color-light;
  padding: 0.05em 0.05em 0.1em 0.05em;
  border-radius: 0em 0em 0.1em 0.1em;
  z-index: 9999;
  position: fixed;
  max-height: 50px;
  top: 0px;
  right: 3vw;
  margin-top:-5px;
  font-size: 4em;
}
.cross:hover {
  cursor: pointer;
  cursor: hand;
}

.modalcontent {
  overflow-wrap: break-word;
  text-align: justify;
  .modalinfo{
    padding: 1em 10px;
  }
  .modal-property{
    display: flex;
    flex-direction: column;
    padding: 1em 0em 1em 0em;
    align-self: center;
  }
  .modal-property .icon{
    width: 25px;
    height: 25px;
  }
  .modal-property .icon-group{
    text-align: center;
    align-items: center;
    display: flex;
    flex-direction: row;
    //margin: 0.15em 0em;
  }
  .modal-property p{
    margin: 0 0 0 5px;
  }

  .modal-property-event{
    display: flex;
    flex-direction: column;
    padding: 1em 0em 1em 10em;
    align-self: center;
  }
  .modal-property-event .icon{
    width: 25px;
    height: 25px;
  }
  .modal-property-event .icon-group{
    text-align: center;
    align-items: center;
    display: flex;
    flex-direction: row;
    //margin: 0.15em 0em;
  }
  .modal-property-event p{
    margin: 0 0 0 5px;
  }

}

.modalinfo .description-container {
    padding: 0.5em 5em 0em 5em;
  }
.modalinfo .description-container .description  p{
    padding-bottom: 1em;
  }
.modalinfo .fairposition-container {
    padding: 1em 0em 1em 0em;
  }
.modalinfo .fairposition-container .fairposition{
  display: flex;
  flex-direction: row;
  justify-content: center;
}
.modalinfo .fairposition-container .fairposition .icon{
  width: 1.4em;
  height: 1.4em;
}
.modalinfo .fairposition-container .position{
  padding: 0em 0em 0em 0.5em;
  align-self: center;
  font-weight: 300;
}
.modalinfo .fairposition-container .map{
  padding: 2em 0em 2em 0em;
}
.modalinfo .job-container {
    @include modal-container;
  }
.modalinfo .job-container .job-section{
  @include modal-section;
}
.modalinfo .location-container {
  @include modal-container;
}
.modalinfo .location-container .location-section{
  @include modal-section;
}
a:hover {
  text-decoration: underline;
}

@media screen and (max-width:1200px) {
  .modalinfo .description-container {
      padding: 0.5em 3em 0.5em 3em;
    }
    .modalinfo .fairposition-container .fairposition{
      font-weight: 300;
    }
}


@media screen and (max-width: $breakpoint-mobile-flipped) {

  .popup {
    width: 90vw;
  }
  .cross {
    position: fixed;
    background-color: $grape;
    right: 15px;
    top: 0px;
  }
  .shade {
    .shadecontent{
      position: absolute;
      top: 0px;
      right: 5px;
      .cross{
        color: $text-color-light;
      }
    }
  }
  .modalcontent .modal-property{
    padding: 1em 0em 1em 0em;
  }
  .modalcontent .modal-property-event{
    padding: 1em 0em 1em 2.5em;
  }
  .modalcontent p{
    font-size: $text-standard-mobile;
    line-height: $line-height-mobile;
  }
  .modalcontent .modalinfo{
    h3, h2{
      font-size: 1.1em;
    }
    .icon{
      width: 20px;
      height: 20px;

    }
  }
  .modalinfo .description-container .description {
    padding: 0em 1em 0.5em 1em;
    font-size: $text-standard-mobile;
    line-height: $line-height-mobile;
  }

  .modalinfo .description-container {
    padding: 0em 1em 0.5em 1em;
    }
  .modalinfo .description-container .description {
    padding: 0em 1em 0.5em 1em;
    font-size: $text-standard-mobile;
    line-height: $line-height-mobile;
  }
  .modalinfo .fairposition-container {
      padding: 0.5em 1em 1em 1em;
    }
    .modalinfo .fairposition-container .fairposition{
      display: flex;
      flex-direction: row;
      justify-content: center;
      font-size: $text-standard-mobile;
    }
}

@media screen and (max-width: $breakpoint-ipad) {
  .modalcontent .modal-property-event{
    padding: 1em 0em 1em 2.5em;
  }

}

